crates/uitest/fixtures/ty_check/method_bound/ret_bound.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/method_bound/ret_bound.fe
---
error[6-0003]: trait bound is not satisfied
   ┌─ ret_bound.fe:12:5
   │
 6 │ where T: From<i32>
   │          --------- required by this bound on `mk`
   ·
12 │     mk(1)
   │     ^^ `T` doesn't implement `From<i32>`

error[6-0003]: trait bound is not satisfied
   ┌─ ret_bound.fe:16:5
   │
 6 │ where T: From<i32>
   │          --------- required by this bound on `mk`
   ·
16 │     mk(1)
   │     ^^ `bool` doesn't implement `From<i32>`
